# aiogram-tortoise-bot-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.env  pyproject.toml
.github/workflows/: tests.yaml
app/: __main__.py  logs.py  settings.py
app/db/: config.py  engine.py
app/db/models/: mixins_model.py  user_model.py
app/handlers/: __init__.py  base.py  base_handler.py  error_handler.py  errors.py
app/middlewares/: __init__.py  user_middleware.py
app/schemas/: user_scheme.py
app/services/: user_service.py
src/: __main__.py  logs.py  settings.py
src/db/: config.py  engine.py
src/db/models/: user_model.py
src/handlers/: __init__.py  base_handler.py
src/middlewares/: __init__.py  user_middleware.py
src/schemas/: __init__.py  user_scheme.py
src/services/: user_service.py
tests/: test_database.py
